# test-xvideo

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
data/: 320x240-yuv-420-planar.yuv  320x240-yuv420p-5frames.yuv  Makefile.am
src/: Makefile.am  test-xvideo.c
